# ODPlatform

./: .gitignore  .odp-workspace
apps/platform/: pyproject.toml
apps/platform/src/od_platform/: __init__.py  _version.py
apps/platform/src/od_platform/cli/: init_project.py  model_infer.py  model_train.py  reset_project.py  transform_data.py  validate_data.py
apps/platform/src/od_platform/common/: __init__.py  config_log.py  constants.py  dataset_path.py  log_rename.py  logging_utils.py  model_path.py  paths.py  performance_utils.py  plot_style.py  refs.py  registry_utils.py  result.py  string_utils.py  system_utils.py
apps/platform/src/od_platform/data_pipeline/: __init__.py  orchestrator.py  report.py  splitsample.py
apps/platform/src/od_platform/data_pipeline/convert/: __init__.py  registry.py  service.py
apps/platform/src/od_platform/data_pipeline/split/: manifest.py  (+4 more)
apps/platform/src/od_platform/frame_source/: __init__.py  factory.py
apps/platform/src/od_platform/inference/: pipeline_config.py
apps/platform/src/od_platform/runtime_config/: __init__.py  api.py  base.py  generator.py  infer.py  loaders.py  merger.py  registry.py  train.py  val.py
apps/platform/src/od_platform/tests/: results.csv  test_convert_rsod.py  test_paths.py  数据质检测试.py  绘图.py
apps/platform/src/od_platform/training/: __init__.py  archive.py  service.py
apps/platform/src/od_platform/validate_dataset/: registry.py  render.py  report.py  service.py  snapshot.py
apps/platform/src/od_platform/visualization/: __init__.py  visualizer.py
apps/platform/tests/: verify.py  绘图.py
(+42 files in other folders)
